Start of basket functionality in UI
